--- a/top.html.erb
+++ b/top.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>カクホ-プロフェッショナルを身近に</title>
+    <title>カクホ-子育て費用をもっと手軽にかしこくカクホ</title>
     <link rel="stylesheet" href="stylesheet.scss">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
